styles new invest view

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -11,4 +11,6 @@ en:
     search: "SEARCH"
     email_address: "email address"
     password: "password"
-
+  invests:
+    new:
+      title: "new investment"
