adds username to user signup

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -10,6 +10,7 @@ en:
   forms:
     search: "SEARCH"
     email_address: "email address"
+    username: "username"
     password: "password"
   invests:
     new:
