creates profile model, controller, views and specs with jsonb fields setup for homepage and github

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -19,6 +19,9 @@ en:
     passwords:
       edit:
         title: "password"
+    profiles:
+      edit:
+        title: "profile"
     accounts:
       edit:
         title: "account"
