Creates initial show view for user with recent invests

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -12,6 +12,8 @@ en:
     email_address: "email address"
     username: "username"
     password: "password"
+  profile:
+    recent: "recent investments"
   invests:
     new:
       title: "new investment"
