Adds edit view and update action to invests

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -17,6 +17,8 @@ en:
   invests:
     new:
       title: "new investment"
+    edit:
+      title: "edit investment"
   settings:
     passwords:
       edit:
