--- a/config/locales/clearance.en.yml
+++ b/config/locales/clearance.en.yml
@@ -41,7 +41,7 @@ en:
       description: You will receive an email within the next few minutes. It
         contains instructions for changing your password.
     edit:
-      description: Your password has been reset. Choose a new password below.
+      description: Choose a new password below.
       title: Change your password
     new:
       description: To be emailed a link to reset your password, please enter
