work on styling

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -16,6 +16,7 @@ en:
     password: "password"
   profile:
     recent: "recent investments"
+    all_invests: "investments"
   invests:
     new:
       title: "new investment"
